# paper_assistant

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  colab_llama_summarizer.ipynb  dataset_construction.ipynb  docker-compose.yml  evaluation.py  extract_text.py  gpt_api.ipynb  pre_process_extracted_text.ipynb  pyproject.toml  setup.cfg  similarity_score.ipynb
backend/: Dockerfile  backend.py  chroma_database.py  database.py  extract_text.py  llm_feats.py  requirements.txt  updated_papers_dataset2.csv  utils.py
backend/configs/: grobid_config.json  openai_config.json
configs/: grobid_config.json
frontend/: Dockerfile  config.py  frontend.py
frontend/my-app/: Dockerfile
frontend/my-app/src/: App.css  App.js  PaperMethods.js  index.js
notebooks/: dataset_construction.ipynb  embedding_encoding.ipynb
