[tool.poetry]
name = "paper-assistant"
version = "0.1.0"
description = ""
authors = ["Ahmed Hatem <ahmed-1998abdallah@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
ipykernel = "^6.25.2"
langchain = "^0.0.320"
llama-cpp-python = "0.2.11"
sentence-transformers = "^2.2.2"
fastapi = "^0.104.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
